ADA-192 Resolve sales order lines from Catalog snapshots (#117)
* Resolve sales lines from Catalog snapshots


* Regenerate sales order API contracts


* Document inactive product conflict response


---------
