# openapi/internal.yaml
@@ -4664,33 +4664,18 @@ paths:
                   items:
                     type: object
                     properties:
-                      sku:
+                      productId:
                         type: string
-                        minLength: 1
-                      name:
-                        type: string
-                        minLength: 1
+                        format: uuid
+                        pattern: ^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$
                       qty:
                         type: integer
                         minimum: 0
                         exclusiveMinimum: true
                         maximum: 9007199254740991
-                      unitPriceCents:
-                        type: integer
-                        minimum: 0
-                        maximum: 9007199254740991
-                      currency:
-                        type: string
-                        minLength: 3
-                        maxLength: 3
-                      taxCategoryCode:
-                        type: string
                     required:
-                      - sku
-                      - name
+                      - productId
                       - qty
-                      - unitPriceCents
-                      - currency
                 shipLine1:
                   type: string
                 shipLine2:
@@ -4844,6 +4829,20 @@ paths:
                     type: string
                     enum:
                       - not_found
+                required:
+                  - error
+                additionalProperties: false
+        "409":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    enum:
+                      - conflict
                 required:
                   - error
                 additionalProperties: false
